--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "main": "build/cjs/index.js",
   "module": "build/esm/index.js",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "compile": "yarn tsc -d -p tsconfig.cjs.json && yarn tsc -d -p tsconfig.esm.json",
     "lint": "yarn biome ci",
