--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,8 +10,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
-          node-version: "22.x"
-      - name: Run Yarn
-        run: yarn lint
+          cache: "yarn"
+          node-version-file: ".nvmrc"
+      - run: yarn install --frozen-lockfile # optional, --immutable
+      - run: yarn lint
