--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -9,12 +9,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Install Yarn
-        run: npm install -g yarn
-      - name: Use Node.js
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          cache: "yarn"
-          node-version-file: ".nvmrc"
-      - run: yarn install --frozen-lockfile # optional, --immutable
+          node-version: 22
+          cache: yarn
+
+      - name: Install Yarn 3.8.4
+        run: |
+          corepack enable
+          yarn set version 3.8.4 --only-if-needed
+          yarn install --frozen-lockfile
       - run: yarn lint
