--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,6 +19,6 @@ jobs:
         run: |
           corepack enable
           yarn set version 3.8.4 --only-if-needed
-          yarn install --frozen-lockfile
+          yarn install --immutable
 
       - run: yarn lint
