--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,4 +21,8 @@ jobs:
           yarn set version 3.8.7 --only-if-needed
           yarn install
 
-      - run: yarn lint
+      - name: Run biome
+        run: yarn lint
+
+      - name: Run vitest
+        run: yarn test
