--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,19 +10,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version-file: ".nvmrc"
+          bun-version: latest
 
-      - name: Install Yarn 3.8.7
-        run: |
-          corepack enable
-          yarn set version 3.8.7 --only-if-needed
-          yarn install
+      - name: Install dependencies
+        run: bun install
 
       - name: Run biome
-        run: yarn lint
+        run: bun run lint
 
       - name: Run vitest
-        run: yarn test
+        run: bun run test
