--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build": "rslib build",
     "lint": "bunx biome ci",
     "prepare": "husky",
-    "test": "vitest run",
+    "test": "bun test",
     "publish": "bun run build && npm publish"
   },
   "devDependencies": {
@@ -34,8 +34,7 @@
     "husky": "9.1.7",
     "pinst": "3.0.0",
     "ts-node": "10.9.2",
-    "typescript": "5.8.3",
-    "vitest": "^3.2.4"
+    "typescript": "5.8.3"
   },
   "packageManager": "bun@latest"
 }
