--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.1.1",
     "@rslib/core": "0.10.6",
+    "@types/bun": "latest",
     "husky": "9.1.7",
     "pinst": "3.0.0",
     "ts-node": "10.9.2",
